# travel-agent

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
client/: index.html  package-lock.json  package.json
client/src/: App.vue  main.ts  style.css  vite-env.d.ts
client/src/components/: AIMessages.vue  MapComponent.vue  RouteResults.vue  TripPlanningForm.vue  WeatherInfo.vue
client/src/models/: types.ts
client/src/utilities/: weather.ts
server/: .env.example  README.md  agent.py  main.py  pyproject.toml  requirements.txt
server/src/travel_agent/: agent.py  mock_agent.py
