[project]
name = "travel-agent"
version = "0.1.0"
description = "AI-powered trip planning application with weather integration"
requires-python = ">=3.12.0"
dependencies = [
    "googlemaps>=4.10.0",
    "langchain>=0.3.23",
    "requests>=2.32.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3
